<resources>
    <string name="app_name">Shopping list application</string>
    <string name="itemColumn">Item</string>
    <string name="amountColumn">Amount</string>
    <string name="addButton">Add</string>
    <string name="deleteAllButton">Remove all items</string>
    <string name="deleteCheckedButton">Remove checked items</string>
    <string name="addAmountText">Amount</string>
    <string name="refreshButton">Refresh</string>
    <string name="warning">Warning!</string>
    <string name="warningMessage">You tried to add existing item to Your list.</string>
    <string name="warningSuggestion">Do You want to replace old, sum up both or cancel adding.</string>
    <string name="sumButton">Sum items</string>
    <string name="replaceButtom">Replace</string>
</resources>
